<resources>
    <string name="app_name" translatable="false">IosCalculator</string>
    <string name="buttonOk">Ok</string>
    <string name="buttonConfirm">Confirm</string>
    <string name="buttonApply">Apply</string>
    <string name="buttonNext">Next</string>
    <string name="buttonCancel">Cancel</string>
    <string name="buttonPrevious">Previous</string>
    <string name="buttonExit">Exit</string>
    <string name="symbolPercent" translatable="false">%</string>
    <string name="symbolDiv" translatable="false">/</string>
    <string name="symbolMul" translatable="false">*</string>
    <string name="symbolSub" translatable="false">-</string>
    <string name="symbolAdd" translatable="false">\+</string>
    <string name="symbolPoint" translatable="false">.</string>
    <string name="symbolExponent" translatable="false">E</string>
    <string name="symbolEqual" translatable="false">=</string>
    <string name="symbolAC" translatable="false">AC</string>
    <string name="symbolC" translatable="false">C</string>
    <string name="symbolRound" translatable="false">≈</string>
    <string name="sampleButton" translatable="false">SampleButton</string>
    <string name="sampleText" translatable="false">SampleText</string>
    <string name="buttonConvert">Convert</string>
    <string name="buttonCalculate">Calculate</string>
    <string name="buttonReset">Reset</string>
    <string name="label_weightText">Weight</string>
    <string name="label_lengthText">Length</string>
    <string name="label_speedText">Speed</string>
    <string name="label_dataText">Data size</string>
    <string name="label_temperatureText">Temperature</string>
    <string name="label_areaText">Area</string>
    <string name="label_volumeText">Volume</string>
    <string name="label_frequencyText">Frequency</string>
    <string name="label_fuelConsumptionText">fuel consumption</string>
    <string name="label_pressureText">Pressure</string>
    <string name="label_powerText">Power</string>
    <string name="label_energyText">Energy</string>
    <string name="label_resultArea">Area</string>
    <string name="label_resultPerimeter">Perimeter</string>
    <string name="label_resultDiagonal">Diagonal</string>
    <string name="label_resultTotalAreaHint">Total area</string>
    <string name="label_resultLateralAreaHint">Lateral area</string>
    <string name="label_resultVolumeHint">Volume</string>
    <string name="symbol_area" translatable="false">S =</string>
    <string name="symbol_lateralArea" translatable="false">Sₗₐₜₑᵣₐₗ =</string>
    <string name="symbol_totalArea" translatable="false">Sₜₒₜₐₗ =</string>
    <string name="symbol_volume" translatable="false">V =</string>
    <string name="symbol_perimeter" translatable="false">P =</string>
    <string name="symbol_height" translatable="false">H =</string>
    <string name="symbol_length" translatable="false">L =</string>
    <string name="symbol_diagonal" translatable="false">d =</string>
    <string name="symbol_diagonalFirst" translatable="false">d₁ =</string>
    <string name="symbol_diagonalSecond" translatable="false">d₂ =</string>
    <string name="label_circleLength">Length of Circle</string>
    <string name="label_parallelepiped">Parallelepiped</string>
    <string name="label_pyramid">Pyramid</string>
    <string name="label_cylinder">Cylinder</string>
    <string name="label_cone">Cone</string>
    <string name="label_sphere">Sphere</string>
    <string name="label_prism">Prism</string>
    <string name="label_dodecahedron">Dodecahedron</string>
    <string name="label_octahedron">Octahedron</string>
    <string name="label_icosahedron">Icosahedron</string>
    <string name="label_tetrahedron">Tetrahedron</string>
    <string name="label_algebraCalculator" translatable="false">Algebra calculator</string>
    <string name="label_geometryCalculator" translatable="false">Geometry calculator</string>
    <string name="label_rectangle">Rectangle</string>
    <string name="label_triangle">Triangle</string>
    <string name="label_rhombus">Rhombus</string>
    <string name="label_circle">Circle</string>
    <string name="label_trapezium">Trapezium</string>
    <string name="label_sector">Sector</string>
    <string name="label_ellipse">Ellipse</string>
    <string name="label_parallelogram">Parallelogram</string>
    <string name="label_geometryCategory">Geometry</string>
    <string name="label_algebraCategory">Algebra</string>
    <string name="label_unitsCategory">Units</string>
    <string name="label_bodiesSubCategory">Bodies</string>
    <string name="label_shapesSubCategory">Shapes</string>
    <string name="text_error">Error</string>
    <string name="hint_sideA">Side A</string>
    <string name="hint_sideB">Side B</string>
    <string name="hint_sideC">Side C</string>
    <string name="hint_length">Length</string>
    <string name="hint_angle">Angle</string>
    <string name="hint_radius">Radius</string>
    <string name="hint_height">Height</string>
    <string name="hint_speed">Speed</string>
    <string name="hint_diagonal">Diagonal</string>
    <string name="hint_diagonalFirst">Diagonal 1</string>
    <string name="hint_diagonalSecond">Diagonal 2</string>
    <string name="tooltip_parallelepipedText">Enter the sides of the parallelepiped</string>
    <string name="tooltip_triangleText">Enter the sides of the triangle. The area is calculated using Heron\'s formula</string>
    <string name="tooltip_rhombusText">Fill only for need field and choose variant calculating of area of the rhombus</string>
    <string name="tooltip_circleText">Enter the radius or length for calculate area of circle</string>
    <string name="tooltip_trapezoidText">Enter the fields for calculate area of trapezoid</string>
    <string name="tooltip_weightText">Fill in the field to convert weight</string>
    <string name="tooltip_lengthText">Fill in the field to convert length</string>
    <string name="tooltip_speedText">Fill in the field to convert speed</string>
    <string name="tooltip_dataText">Fill in the field to convert data</string>
    <string name="tooltip_temperatureText">Fill in the field to convert temperature</string>
    <string name="tooltip_areaText">Fill in the field to convert square</string>
    <string name="tooltip_volumeText">Fill in the field to convert volume</string>
    <string name="tooltip_frequencyText">Fill in the field to convert frequency</string>
    <string name="tooltip_fuelConsumptionText">Fill in the field to convert fuel consumption</string>
    <string name="tooltip_pressureText">Fill in the field to convert pressure</string>
    <string name="tooltip_powerText">Fill in the field to convert power</string>
    <string name="tooltip_energyText">Fill in the field to convert energy</string>
    <string name="tooltip_item">Item</string>
    <string name="tooltip_value">Value</string>
    <string name="tooltip_enterText">Enter the number</string>
    <string name="text_convertSymbols" translatable="false">↓↑</string>
    <string name="text_In" translatable="false">↓</string>
    <string name="text_To" translatable="false">&#8594;</string>
    <string name="text_Selector">Convertors</string>
    <string-array name="weight_units">
        <item>μg - micrograms</item>                        
        <item>mg - milligram</item>                         
        <item>g - gram</item>                               
        <item>kg - kilogram</item>                          
        <item>t - tonne</item>                              
        <item>kt - kiloton</item>                           
        <item>mt - megaton</item>                           
    </string-array>
    <string-array name="length_units">
        <item>nm - nanometer</item>                         
        <item>µm - micrometer</item>                        
        <item>mm - millimeter</item>                        
        <item>cm - centimeter</item>                        
        <item>dm - decimeter</item>                         
        <item>m - meter</item>                              
        <item>km - kilometer</item>                         
    </string-array>
    <string-array name="speed_units">
        <item>c - Speed of light</item>                     
        <item>m/s - Meter per second</item>                 
        <item>km/h - Kilometer per hour</item>              
        <item>km/s - Kilometer per second</item>            
        <item>mph - Miles per hour</item>                   
        <item>mps - Miles per second</item>                 
        <item>kn - Knots</item>                             
    </string-array>
    <string-array name="data_units">
        <item>B - byte</item>                               
        <item>KB - kilobyte</item>                          
        <item>MB - megabyte</item>                          
        <item>GB - gigabyte</item>                          
        <item>TB - terabyte</item>                          
        <item>PB - petabyte</item>                          
        <item>EB - exabyte</item>                           
    </string-array>
    <string-array name="temperature_units">
        <item>°C - Celsius</item>                           
        <item>℉ - Fahrenheit</item>                         
        <item>K - Kelvin</item>                             
        <item>°R - Rankine</item>                           
        <item>°Re - Réaumur</item>                          
    </string-array>
    <string-array name="volume_units">
        <item>ml - milliliter</item>                        
        <item>l - liter</item>                              
        <item>cm³ - cubic centimeter</item>                 
        <item>ft³ - cubic foot</item>                       
        <item>in³ - cubic inch</item>                       
        <item>gal - gallon</item>                           
    </string-array>
    <string-array name="area_units">
        <item>µ² - micron</item>
        <item>µm² - millimeter</item>
        <item>cm²- centimeter</item>
        <item>dm² - decimeter</item>
        <item>m² - meter</item>
        <item>km² - kilometer</item>
        <item>ha - gectar</item>
    </string-array>
    <string-array name="frequency_units">
        <item>hz - hertz</item>                             
        <item>khz - kilohertz</item>                        
        <item>mhz - megahertz</item>                        
        <item>ghz - gigahertz</item>                        
    </string-array>
    <string-array name="fuelConsumption_units">
        <item>km/l - kilometer per liter</item>             
        <item>l/km - liter per 100 kilometers</item>        
        <item>mph/g - mile per gallon</item>                
    </string-array>
    <string-array name="pressure_units">
        <item>atm - Atmosphere</item>                       
        <item>bar - Bar</item>                              
        <item>Pa - Pascal</item>                            
    </string-array>
    <string-array name="power_units">
        <item>W - Watt</item>                               
        <item>kW - Kilowatt</item>                          
        <item>MW - Megawatt</item>                          
        <item>GW - Gigawatt</item>                          
        <item>hp - Horsepower</item>                        
    </string-array>
</resources>