<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:orientation="vertical"
    tools:context=".TriangleActivity">

    <Button
        style="@style/buttonActionOperator"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/text_Selector"
        android:textStyle="bold"
        android:textSize="22sp"
        android:onClick="switchToSelector" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="12dp"
        android:background="@drawable/linearlayout_bg_sheet"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            style="@style/displayTextConvert"
            android:text="@string/text_labelTriangleDefault" />

        <TextView
            style="@style/tooltipTextStyle"
            android:text="@string/tooltip_triangleText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/inputTriangleSideA"
                style="@style/inputTextToConvert"
                android:layout_width="match_parent"
                android:layout_margin="8dp"
                android:hint="@string/hint_sideA"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/inputTriangleSideB"
                style="@style/inputTextToConvert"
                android:layout_width="match_parent"
                android:layout_margin="8dp"
                android:hint="@string/hint_sideB"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/inputTriangleSideC"
                style="@style/inputTextToConvert"
                android:layout_width="match_parent"
                android:layout_margin="8dp"
                android:hint="@string/hint_sideC"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/areaTriangleResult"
            style="@style/displayTextConvert"
            android:text="@string/text_labelTriangleDefault" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <Button
                style="@style/buttonAction"
                android:layout_width="match_parent"
                android:onClick="resetFieldsTriangle"
                android:text="@string/buttonReset" />

            <Button
                style="@style/buttonActionOperator"
                android:layout_width="match_parent"
                android:onClick="calculateTriangle"
                android:text="@string/buttonCalculate" />
        </LinearLayout>


    </LinearLayout>




</LinearLayout>