<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:background="@drawable/linearlayout_bg_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:elevation="24dp"
        android:layout_margin="8dp"
        android:padding="4dp">

        <TextView
            style="@style/displayTextConvert"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="12dp"
            android:background="@drawable/gray75_box"
            android:text="@string/text_labelRhombus" />

        <TextView
            style="@style/tooltipTextStyle"
            android:layout_margin="8dp"
            android:textSize="18dp"
            android:text="@string/tooltip_rhombusText" />



        <LinearLayout
            style="@style/inputFieldToAreaContainer">

            <Spinner
                android:id="@+id/dropDownFormula"
                style="@style/spinnerConvert" />

            <EditText
                android:id="@+id/inputRhombusSideA"
                style="@style/inputTextToConvert"
                android:layout_width="match_parent"
                android:layout_margin="8dp"
                android:hint="@string/hint_sideA"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/inputRhombusAngle"
                style="@style/inputTextToConvert"
                android:layout_width="match_parent"
                android:layout_margin="8dp"
                android:hint="@string/hint_angle"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/inputRhombusHeight"
                style="@style/inputTextToConvert"
                android:layout_width="match_parent"
                android:layout_margin="8dp"
                android:hint="@string/hint_height"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="8dp"
                android:orientation="horizontal"
                android:padding="10dp">

                <EditText
                    android:id="@+id/inputRhombusDiagonalFirst"
                    style="@style/inputTextToConvert"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:hint="@string/hint_diagonalFirst"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/inputRhombusDiagonalSecond"
                    style="@style/inputTextToConvert"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:hint="@string/hint_diagonalSecond"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            style="@style/displayTextConvert"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/gray75_box"
            android:layout_margin="12dp"
            android:text="@string/text_In" />

        <TextView
            android:id="@+id/areaRhombusResult"
            style="@style/displayTextConvert"
            android:background="@drawable/linearlayout_bg_sheet"
            android:layout_margin="12dp"
            android:text="@string/text_labelRhombus" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <Button
                android:id="@+id/buttonReset"
                style="@style/buttonConverterReset"
                android:layout_width="match_parent"
                android:onClick="resetFieldsRhombus"
                android:text="@string/buttonReset" />

            <Button
                android:id="@+id/buttonConvert"
                style="@style/buttonConverterConvert"
                android:layout_width="match_parent"
                android:onClick="calculateRhombus"
                android:text="@string/buttonCalculate" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>