<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:background="@drawable/linearlayout_bg_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:elevation="24dp"
        android:layout_margin="8dp"
        android:padding="4dp">

        <TextView
            style="@style/displayTextConvert"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="12dp"
            android:background="@drawable/gray75_box"
            android:text="@string/text_labelTriangleDefault" />

        <TextView
            style="@style/tooltipTextStyle"
            android:layout_margin="8dp"
            android:textSize="16dp"
            android:text="@string/tooltip_triangleText" />

        <LinearLayout
            style="@style/inputFieldToAreaContainer">
            <EditText
                android:id="@+id/inputTriangleSideA"
                style="@style/inputTextToConvert"
                android:layout_width="match_parent"
                android:layout_margin="8dp"
                android:textSize="18sp"
                android:hint="@string/hint_sideA" />

            <EditText
                android:id="@+id/inputTriangleSideB"
                style="@style/inputTextToConvert"
                android:layout_width="match_parent"
                android:layout_margin="8dp"
                android:textSize="18sp"
                android:hint="@string/hint_sideB" />

            <EditText
                android:id="@+id/inputTriangleSideC"
                style="@style/inputTextToConvert"
                android:layout_width="match_parent"
                android:layout_margin="8dp"
                android:textSize="18sp"
                android:hint="@string/hint_sideC" />
        </LinearLayout>

        <TextView
            style="@style/displayTextConvert"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/gray75_box"
            android:layout_margin="12dp"
            android:text="@string/text_In" />

        <TextView
            android:id="@+id/areaTriangleResult"
            style="@style/displayTextConvert"
            android:background="@drawable/linearlayout_bg_sheet"
            android:layout_margin="12dp"
            android:hint="@string/text_labelTriangleDefault"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/buttonReset"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@drawable/style_button_number"
                android:layout_margin="12dp"
                android:onClick="resetFields"
                android:text="@string/buttonReset" />

            <Button
                android:id="@+id/buttonConvert"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@drawable/style_button_operator"
                android:layout_margin="12dp"
                android:onClick="calculateConvertation"
                android:text="@string/buttonConvert" />
        </LinearLayout>



    </LinearLayout>




</LinearLayout>