<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".RhombusActivity">

    <Button
        style="@style/buttonActionOperator"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/text_Selector"
        android:textStyle="bold"
        android:textSize="22sp"
        android:onClick="switchToSelector" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="12dp"
        android:background="@drawable/linearlayout_bg_sheet"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp"
            android:background="@drawable/linearlayout_bg_sheet"
            android:text="@string/text_labelRhombus"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:lines="2"
            android:text="@string/tooltip_rhombusText"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:padding="4dp"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/dropDownFormula"
                style="@style/spinnerConvert" />

            <EditText
                android:id="@+id/inputRhombusSideA"
                style="@style/inputTextToConvert"
                android:layout_width="match_parent"
                android:layout_margin="8dp"
                android:hint="@string/hint_sideA"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/inputRhombusAngle"
                style="@style/inputTextToConvert"
                android:layout_width="match_parent"
                android:layout_margin="8dp"
                android:hint="@string/hint_angle"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/inputRhombusHeight"
                style="@style/inputTextToConvert"
                android:layout_width="match_parent"
                android:layout_margin="8dp"
                android:hint="@string/hint_height"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="8dp"
                android:orientation="horizontal"
                android:padding="10dp">

                <EditText
                    android:id="@+id/inputRhombusDiagonalFirst"
                    style="@style/inputTextToConvert"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:hint="@string/hint_diagonalFirst"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/inputRhombusDiagonalSecond"
                    style="@style/inputTextToConvert"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:hint="@string/hint_diagonalSecond"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/areaRhombusResult"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="16dp"

            android:text="@string/text_labelRhombus"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <Button
                style="@style/buttonAction"
                android:layout_width="match_parent"
                android:onClick="resetFieldsRhombus"
                android:text="@string/buttonReset" />

            <Button
                style="@style/buttonActionOperator"
                android:layout_width="match_parent"
                android:onClick="calculateRhombus"
                android:text="@string/buttonCalculate" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>