<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:background="@drawable/linearlayout_bg_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:elevation="24dp"
        android:layout_margin="8dp"
        android:padding="4dp">

        <TextView
            android:id="@+id/labelMathCalculator"
            style="@style/displayTextConvert"
            android:layout_margin="12dp"
            android:background="@drawable/gray75_box"
            android:text="@string/label_algebraCalculator" />

        <TextView
            android:id="@+id/tooltipMathCalculator"
            style="@style/tooltipTextStyle"
            android:layout_margin="8dp"
            android:textSize="16sp"
            android:text="@string/tooltip_parallelepipedText" />

        <LinearLayout
            android:id="@+id/inputContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:backgroundTint="@color/gray120"
            android:background="@drawable/linearlayout_bg_sheet"
            android:orientation="vertical">

        </LinearLayout>

        <TextView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:textSize="24sp"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:background="@drawable/gray75_box"
            android:textColor="@color/white"
            android:layout_margin="12dp"
            android:text="@string/text_In" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <ImageButton
                android:id="@+id/buttonMathReset"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_clear"
                android:background="@drawable/linearlayout_bg_sheet"
                android:backgroundTint="@color/orange"
                android:contentDescription="@string/sampleButton"
                android:layout_margin="12dp" />

            <TextView
                android:id="@+id/mathResult"
                style="@style/displayTextConvert"
                android:hint="@string/label_geometryCalculator"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>